# Run_Qml_Files

Run_Qml/: CMakeLists.txt  Main.qml  MainView.qml  filedialog.cpp  filedialog.h  main.cpp  processor.cpp  processor.h  res.qrc
